--- a/layout-para/nhon/index.html
+++ b/layout-para/nhon/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Layout-Para</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+   
+    <div class="bg">
+        <img src="img/logopara.png" alt="">
+        <div class="box">
+            <input type="text" placeholder="Số Phòng"><br><br>
+            <input type="text" placeholder="Mật Khẩu">
+        </div><br><br>
+        <div class="button">
+            <button>Vào Phòng</button><br><br>
+            <button>Tạo Phòng</button>
+        </div>
+        <div class="lienlac">
+            <p>Thông tin nhà cung cấp<br>Số điện thoại</p>
+        </div>
+    </div>
 </body>
 </html>
