--- a/layout-para/van/index.html
+++ b/layout-para/van/index.html
@@ -8,19 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <img src="./img/logopara.png" >
-        <div class="box">
-            <p class="text">
-                Mật khẩu phòng không đúng</br>
-                (lần:<span>1</span>)
-            </p>
-            <button>OK</button>
-        </div>
-        <div class="footer">
-            <p>Thông tin nhà cung cấp</br>
-                Số điện thoại</p>
-        </div>
+    <div class="hihi">
+        <div class="container">
+            <img src="./img/logopara.png" >
+            <div class="box">
+                <p class="text">
+                    Mật khẩu phòng không đúng</br>
+                    (lần:<span>1</span>)
+                </p>
+                <button>OK</button>
+            </div>
+            <div class="footer">
+                <p>Thông tin nhà cung cấp</br>
+                    Số điện thoại</p>
+            </div>
     </div>
 </body>
 </html>
