--- a/layout-para/van/index.html
+++ b/layout-para/van/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="hihi">
-        <div class="container">
+    <div class="container">
+        <div>
             <img src="./img/logopara.png" >
             <div class="box">
                 <p class="text">
@@ -22,6 +22,7 @@
                 <p>Thông tin nhà cung cấp</br>
                     Số điện thoại</p>
             </div>
-    </div>
+        </div>
+    </div>    
 </body>
 </html>
